--- a/apps/hyprland/hyprland.conf
+++ b/apps/hyprland/hyprland.conf
@@ -195,6 +195,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, rofi -show drun -show-icons
+bind = $mainMod, W, exec, firefox
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
