--- a/apps/hyprland/hyprland.conf
+++ b/apps/hyprland/hyprland.conf
@@ -26,7 +26,7 @@ monitor=,1920x1080,auto,1,bitdepth,8
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
