--- a/apps/hyprland/hyprland.conf
+++ b/apps/hyprland/hyprland.conf
@@ -253,6 +253,7 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -271,5 +272,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 
 exec-once=bash ~/.config/hypr/start.sh
