--- a/apps/hyprland/hyprland.conf
+++ b/apps/hyprland/hyprland.conf
@@ -28,7 +28,6 @@ monitor=,1920x1080,auto,1,bitdepth,8
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
 
 
 #################
@@ -190,11 +189,11 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, rofi -show drun -show-icons
 bind = $mainMod, W, exec, brave
+bind = $mainMod, S, exec, bash ~/.config/rofi/screenshot-menu.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -227,8 +226,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
