--- a/apps/hyprland/hyprland.conf
+++ b/apps/hyprland/hyprland.conf
@@ -194,6 +194,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, D, exec, rofi -show drun -show-icons
 bind = $mainMod, W, exec, brave
 bind = $mainMod, S, exec, bash ~/.config/rofi/screenshot-menu.sh
+bind = $mainMod, G, exec, bash ~/.config/rofi/duckduckgo-search-menu.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
