--- a/apps/hyprland/hyprland.conf
+++ b/apps/hyprland/hyprland.conf
@@ -16,7 +16,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
-monitor=,1920x1080,auto,1,bitdepth,8
+monitor=eDP-1,1920x1080@120Hz,0x0,1.0
 
 
 ###################
